src/objects/Ascent_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Ascent_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_Invoiced_YTD__c</fullName>
        <label>Amount Invoiced YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <label>Current Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Invoiced_YTD__c</fullName>
        <label>Hours Invoiced YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Start_Date__c</fullName>
        <label>Month Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Tier__c</fullName>
        <label>Next Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ascent Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_Invoiced_YTD__c</columns>
        <columns>Current_Tier__c</columns>
        <columns>Hours_Invoiced_YTD__c</columns>
        <columns>Month_End_Date__c</columns>
        <columns>Month_Start_Date__c</columns>
        <columns>Next_Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ascent Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ascent Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>